# wave

./: CMakeLists.txt  README.md  make-no-bullshit.sh  timer.c  timer.h  wave-ocl.c  wave.c  wave.geany
